syntax = "proto3";

option java_generic_services = true;
option java_multiple_files = true;
option java_package = "com.distribute.grpc";
option java_outer_classname = "DirectoryInt";

service DirectoryService {
    rpc Ls (LsRequest) returns (LsResponse);
    rpc mkdir (LsRequest) returns (MkdirResponse);
    rpc cd (LsRequest) returns (MkdirResponse);
}

message LsRequest {
    string path = 1;
}

message LsResponse {
    repeated string filenames = 1;
}

message MkdirResponse{
    bool status = 1;
}